	 screen is paged in other than at 0x4000.
20031227 ui/gtk/debugger.c, debugger/: add page-specific breakpoints.
20031227 debugger/debugger{,_internals}.h, ui/gtk/pokefinder.c: add ability
	 to set write breakpoints by clicking on the appropriate 'possible'.
20031228 ui/gtk/debugger.c, ui/gtk/pokefinder.c: update the debugger display
	 after adding a breakpoint with the pokefinder.
20031228 sound.c: add dummy functions for when we don't have a sound device
	 (fixes bug #866403).
20031228 fuse.c: must call machine_init_machines() before tape_init()
	 (Witold).
20031228 ui/gtk/{Makefile.am,fileselector.c,gtkui.c}: make the GTK+
	 fileselector remember its previous directory. Also move the
	 fileselector code into its own file and tidy up a bit.
20031229 ui/gtk/debugger.c: double-clicking on the stack display causes
	 emulation to run to that address.
20031229 event.[ch], debugger/, ui/gtk/debugger.c: new breakpoint type to
	 trigger when tstates is greater than a certain value.
20031229 ui/gtk/debugger.c: double-clicking on an event causes emulation
	 to run until that event occurs.
20031230 fuse.c: another attempt to get tape_init() in the right place
	 (patch #867906) (Fred).
20031231 z80/z80_ops.c: use gcc's computed goto feature to give a small
	 performance boost.
20031231 ui/gtk/fileselector.c: remove incorrect pointer warnings.
20031231 ui/sdl/sdljoystick.c: 'port' is unused in ui_joystick_read().
	 (patch #868419) (Fred).
20031231 rzx.c, ui/gkt/gtkui.c: always assign float values to timer_count.
	 (patch #868415) (Fred).
20031231 ui/win32: first (simple!) native Win32 user interface (Marek).
20031231 ChangeLog: bring up-to-date.
20040101 ui/sdl/sdlui.c, widget/widget.c: put speed in SDL title (patch
	 #868412) (Fred).
20040101 ui/sdl/sdldisplay.c: simplify uidisplay_frame_end by combining the
         two loops increasing the chance that the data processed by the
	 first is still available in cache for the second (patch #868414)
	 (Fred).