@@ -27,10 +27,13 @@
 #ifndef FUSE_FUSE_H
 #define FUSE_FUSE_H
 
+#include <limits.h>
 #include <libspectrum.h>
 
 extern char *fuse_progname;		/* argv[0] */
-extern char fuse_directory[ 1024 ];	/* The directory we started in */
+extern char fuse_directory[ PATH_MAX ];	/* The directory we started in */
+
+extern char* fuse_progname;		/* argv[0] */
 
 extern int fuse_exiting;		/* Shall we exit now? */
 
